feat: Re-implement SPEC QA Recon UI and fix header bug
This commit introduces a major overhaul of the "Filter Excel Data" mode, now named "SPEC QA Recon", and fixes a critical bug in multi-layer header detection.

**Header Detection Fix:**
- The `CanonicalNameBuilder` has been refactored to correctly handle multi-row headers, including those with merged cells.
- The logic now correctly distinguishes between `BREADCRUMB` and `LEAF_ONLY` concatenation modes, especially for columns that are not part of the main header hierarchy.
- Added a comprehensive unit test (`CanonicalNameBuilderTest`) with a complex Excel file to verify the fix and prevent regressions.

**SPEC QA Recon UI Overhaul:**
- Re-implemented the UI from scratch on a clean, stable foundation.
- The new UI features a three-part layout with a filter logic builder, data previews, and a results panel.
- Implemented a connector-based filter logic builder, allowing users to create complex expressions with `AND`/`OR` logic between individual rules and groups.
- Implemented a "Wrap Selection" feature to group existing rules.
- Implemented a full-featured Profile Management system using versioned JSON, allowing users to save and load filter configurations, including file paths and sheet names.
- Implemented a "Live Counts" feature to show a real-time count of matches for each rule.
- Added UI enhancements like search boxes for preview tables and tooltips for table cells.